# cinema-search-bot

./: .env.template  .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml
src/: api.py  bot.py  config.py  exceptions.py  logging_config.py
src/api_client/: __init__.py  movie_by_data.py  movie_by_id.py
src/database/: __init__.py  create_db.py  crud.py  db_config.py
src/database/models/: __init__.py  base.py  movie.py  search_id_movie.py
src/database/repository/: __init__.py  create_movie.py  movie_by_id.py
src/handlers/custom/: __init__.py  paginate_movies.py  random_movie.py  search_name.py
src/handlers/default/: __init__.py  echo.py  help.py  start.py
src/keyboards/inlines/: __init__.py  pagination_movie.py
src/services/: __init__.py  base.py  message_movie.py  search_movie_by_name.py  search_random_movie.py
src/utils/: __init__.py  media.py  message_length.py  movie_info.py  movie_information_message_template.py  movie_search.py  search_id_uuid4.py  secret_randint.py  set_commands.py  state_machine.py
