[project]
name = "cinema-search-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pre-commit>=4.5.0",
]

[tool.isort]
# isort settings
profile = "black"
line_length = 120

[tool.black]
# Black settings
line-length = 120
skip-string-normalization = true
include = "./*.py"
extend-exclude = '''
/(\\.venv|\\.git|__pycache__)/
'''
force-exclude = '''
/(\\.venv|\\.git|__pycache__)/
'''
